# Minkult

./: Dockerfile  Makefile  README.md  data.json  docker-compose.yaml  pyproject.toml  start-prod.sh  venv-install.sh
app/api/: serializers.py  urls.py  views.py
app/app/: settings.py  urls.py
app/park/: models.py
app/park/management/commands/: parser.py
app/park/migrations/: 0001_initial.py
