[project]
name = "minkult"
version = "0.1.0"
description = "Сервис-парсер сайта Министерства Культуры РФ"
authors = [
    {name = "blackmamba2004",email = "vasilsemen04@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"

[tool.poetry.dependencies]
django = "^5.2"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
drf-yasg = "^1.21.10"
bs4 = "^0.0.2"
psycopg = {extras = ["binary"], version = "^3.2.6"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.venv|
    build|
    dist|
    migrations
)/
'''